--- a/会说话的代码.md
+++ b/会说话的代码.md
@@ -17,6 +17,8 @@
     - [对设计方法不了解](#对设计方法不了解)
     - [编程习惯不佳](#编程习惯不佳)
         - [没有管理好代码的职责](#没有管理好代码的职责)
+- [第六章 编程语言的学习](#第六章-编程语言的学习)
+    - [简化的校验模型](#简化的校验模型)
 
 <!-- /TOC -->
 # 前言
@@ -494,5 +496,156 @@ public class EmailAddress{
 ```
 
 这个例子说明了随手放置方法功能会导致代码可复用性降低,职责混乱等问题.
+
+
+# 第六章 编程语言的学习
+
+## 简化的校验模型
+
+当从外部输入传来输入时要对响应的数据进行校验才能够使用.但是传统方法把所有参数都进行全面校验,光校验代码就会占据一半个方法的长度.下面是一个图书信息保存的例子:
+
+```java
+
+    public  class BookAction{
+        public void save(Book book) throws ValidationError{
+            if (book.name == null || book.name.equals("")){
+                throw new ValidationError("书名不能为空.");
+            }
+            if (book.isbn == null || book.isbn.equals("")){
+                throw new ValidationError("ISBN不能为空.");
+            }
+            if (book.press == null || book.press.equals("")){
+                throw new ValidationError("出版社不能为空.");
+            }
+            if (book.author == null || book.author.equals("")){
+                throw new ValidationError("作者不能为空.");
+            }
+            
+            book.save();
+        }
+    }
+```
+
+为了更加明确代码的含义,附上Book类的定义和ValidationException类的定义
+
+```java
+    public class Book{
+        public String name;
+        public String author;
+        public String press;
+        public String isbn;
+        
+    }
+    
+    public class ValidationError implements Throwable{
+        public String mMessage;
+        public ValidationError(String message){
+            mMessage = message;
+        }
+    }
+
+```
+
+就上述代码来说,大量的校验代码使得阅读体验大大下降.
+有一种相对简单的修改方式就是将非空判定提取到Util类中完成.
+
+例如
+
+```java
+public class StringUtil{
+        public static boolean isNullOrEmpty(String text){
+            return text == null || text.equals("");
+        }
+    }
+```
+但是这并不能够缩减长长的判定语句,而且如果增加了长度校验,类型校验(例如ISBN号只能是数字和短线,并符合一定规则)等,校验代码将仍然会变长
+
+如果采用这种形式来书写,代码的可读性就一定能大大提高
+```java
+    public class BookAction{
+        public void save(Book book){
+            List<ValidateError> errors = validate(book);
+            if (!errors.isEmpty()){
+                render(errors);
+                return;
+            }
+            book.save();
+        }
+        
+        private List<ValidateError> validate(Entity entity){
+            //这里究竟该怎么写呢?后面再来分析
+        }
+        
+        private void render(List<ValidateError> errors){
+            //将各种错误消息显示在正确的位置上
+        }
+    }
+    
+    public class ValidateError{
+        public String fieldName;
+        public String errorText;
+    }
+```
+
+如果只是把以前的校验换一种形式存放,那么并不能对整体可读性带来多大优势,而且可复用性也不强.所以,校验应该和Book类本身分开, 将来校验其他对象时也可以采用同样机制进行校验.
+
+如果可以通过这种形式对Book进行定义,其他对象也可以采用同样方式进行定义,代码就变得易读好懂,复用性也得到了提高
+
+```java
+ public class Book extends Entity{
+        @Required
+        public String name;
+        @Required
+        public String author;
+        @Required
+        public String press;
+        @Required
+        @MaxLength(17)
+        public String isbn;
+    }
+```
+
+上述Annotaion的对应定义如下:
+```java
+    public @interface Required{
+
+    }
+
+    public @interface MaxLength{
+        int value();
+    }
+
+```
+那么怎么才能实现对应的校验呢?
+限于篇幅原因,下列代码为简化校验模型,只处理String类型的数据,处理其他类型的数据则会发生错误.
+
+
+```java
+    public class BookAction {
+        public List<ValidateError> validate(Book book) {
+            List<ValidateError> errors = new ArrayList<>();
+            java.lang.reflect.Field[] fields = book.getClass().getDeclaredFields();
+            for (java.lang.reflect.Field field : fields) {
+                Annotation[] annotaions = field.getDeclaredAnnotations();
+                for (Annotation a : annotaions) {
+                    if (a instanceof Required) {
+                        if (ValidateUtil.isNullOrEmpty(field)) {
+                            errors.add(new ValidateError(field, field.name + "不能为空."));
+                        }
+                    } else if (a instanceof MaxLength) {
+                        if (field.length() > ((MaxLength) a).value()) {
+                            errors.add(new ValidateError(field, field.name + "长度不能超过" + ((MaxLength) a).value() + "."));
+                        }
+                    }
+                }
+            }
+
+            return errors;
+        }
+    }
+
+```
+
+这样,就可以通过Annotation来大幅度简化校验代码,并且通过一个通用的校验来进行全部的处理.还可以考虑为校验机制增加可扩展接口,为方便其他人增加自己的校验机制,例如特殊的格式校验等.
 
 
