--- a/会说话的代码.md
+++ b/会说话的代码.md
@@ -19,6 +19,7 @@
         - [没有管理好代码的职责](#没有管理好代码的职责)
 - [第六章 编程语言的学习](#第六章-编程语言的学习)
     - [简化的校验模型](#简化的校验模型)
+    - [简化的权限模型](#简化的权限模型)
 
 <!-- /TOC -->
 # 前言
@@ -647,5 +648,11 @@ public class StringUtil{
 ```
 
 这样,就可以通过Annotation来大幅度简化校验代码,并且通过一个通用的校验来进行全部的处理.还可以考虑为校验机制增加可扩展接口,为方便其他人增加自己的校验机制,例如特殊的格式校验等.
+
+## 简化的权限模型
+
+权限校验是一般系统中比较常见的一个功能.对于权限设计的方法也是多种多样的,而采用注解进行权限模型的设计会使实现和变更都变得很容易.
+
+页面的权限声明方式:
 
 
