--- a/会说话的代码.md
+++ b/会说话的代码.md
@@ -20,6 +20,9 @@
 - [第六章 编程语言的学习](#第六章-编程语言的学习)
     - [简化的校验模型](#简化的校验模型)
     - [简化的权限模型](#简化的权限模型)
+    - [设计模式](#设计模式)
+    - [采用位掩码减少类的个数](#采用位掩码减少类的个数)
+        - [位掩码](#位掩码)
 
 <!-- /TOC -->
 # 前言
@@ -655,4 +658,88 @@ public class StringUtil{
 
 页面的权限声明方式:
 
+```java
 
+ public class Users extends Controller{
+       @Permission(Authority.ALL)
+       public String list(){}
+
+       @Permission(Authority.ADMIN | Authority.SELF)
+       public String edit(int id){}
+
+       @Permission(Authority.ADMIN | Authority.SELF)
+       public String save(int id){}
+   }
+```
+
+这是一个[以位掩码的方式](#采用位掩码减少类的个数)定义的类,
+而使用这些数据的方式可以通过下面的类来实现
+```java
+    public class Authority{
+        public static final int ALL = 0xffffff;
+
+        public static final int ROLE_MASK = 0x000fff;
+        public static final int ADMIN = 0x000001;
+        public static final int MANAGER = 0x000002;
+
+        public static final int OWNER_SHIP = 0xfff000;
+        public static final int SELF = 0x001000;
+        public static final int OWNER = 0x002000;
+    }
+
+
+    public class Controller{
+        public String invoke(String className, String methodName){
+            Class clazz = Class.forName(className);
+            Method method = clazz.getDeclaredMethod(methodName);
+            Annotation permission = method.getDeclaredMethod("Permession");
+            int authority = permission.value();
+            int userPermission = session.get("USER_PERMISSION");
+            if ((userPermission && Authority.ROLE_MASK & authority == 0)
+                    && (userPermission & Authority.OWNER_SHIP & authority == 0)){
+                return "no_permission";
+            }
+            
+            return method.invoke(clazz.newInstance());
+        }
+    }
+```
+
+在上面的例子中,主调度方法利用各个方法定义的注解来判定其权限,这样每个方法定义其自己的权限即可.通过这样的方法把权限分散到各个方法自身去,比较容易判断定义的正确性,也利于维护,而采用集中式权限判定容易产生遗漏和错误.
+
+# 第7章 设计方法的学习
+
+
+## 设计模式
+
+- 创建型模式:
+  - 抽象工厂:创建几类家族的实例
+  - 构建者:把对象的构建和它分开
+  - 工厂方法:创建一个共通接口的若干个子类的实例
+  - 原型:创建一个被完整初始化的实例用于复制或者克隆
+  - 单例:使一个类无论在什么时候访问都可以得到唯一的实例
+- 结构性模式:
+  - 适配器:为多个不同的类之间建立连接的接口
+  - 桥接:对象有多个属性时把属性之间的关联关系从m*n改为m+n
+  - 装饰:动态的为对象增加责任
+  - 外观:通过一个接口来隐藏整个子系统
+  - 享元:用一个共享的实例来加快访问
+  - 代理:用一个对象代表另一个对象
+- 行为型模式:
+  - 职责链:在一个链条间传递任务
+  - 命令:把命令包装为对象
+  - 翻译者:在一个语言环境中不同的语言元素表示不同的语义
+  - 迭代者:循环地访问一个列表中的元素
+  - 协调者:在对象之间建立一个简化的沟通类
+  - 备注:存储对象内部的数值
+  - 观察值:当对象发生变化时通知一组其他对象
+  - 状态:当对象的状态变更时变更处理
+  - 策略:采取不同的算法进行不同的处理
+  - 模板方法:把通用的处理放在父类,具体的实现步骤放在子类中实现
+  - 访问者:不必改变对象定义的情况下定义应用于对象的操作
+
+## 采用位掩码减少类的个数
+
+### 位掩码
+
+位掩码的意思是,对于一个数字的每一位作为一个开关的标志
