--- a/会说话的代码.md
+++ b/会说话的代码.md
@@ -742,4 +742,10 @@ public class StringUtil{
 
 ### 位掩码
 
-位掩码的意思是,对于一个数字的每一位作为一个开关的标志
+位掩码的意思是,对于一个数字的每一位作为一个开关的标志.当若干个位在一起时,可以表征的状态就达到2的
+n次方之多.如果同样的组合都写成类,那么累的数量就会急剧上升.位掩码是一个很好地减少类数量的方法.位掩码可以用来管理多种不同维度的变化.例如:
+
+
+```java
+
+```
