--- a/会说话的代码.md
+++ b/会说话的代码.md
@@ -26,6 +26,14 @@
         - [5.2.1. 位掩码](#521-位掩码)
         - [替代多态](#替代多态)
         - [替代多态枚举](#替代多态枚举)
+- [第 9 章 编程习惯的改进](#第-9-章-编程习惯的改进)
+    - [结构方面的改进](#结构方面的改进)
+        - [缩短长判定](#缩短长判定)
+        - [缩短长分支](#缩短长分支)
+    - [分离暧昧关系](#分离暧昧关系)
+        - [循环引用](#循环引用)
+        - [间接继承](#间接继承)
+    - [多维度变化](#多维度变化)
 - [6. 其他](#6-其他)
     - [6.1. 随机提供器](#61-随机提供器)
 
@@ -899,6 +907,244 @@ public static final int SHAPE_ELLIPSE = 0x080;
 ```
 
 相对来说,最后一种写法最为简练.
+
+# 第 9 章 编程习惯的改进
+
+## 结构方面的改进
+
+### 缩短长判定
+
+3. 去掉null判定 
+
+很多时候,为了避免发生NullPointException,需要对对象进行非空判定.
+然后,如果利用了空对象模式,这个判定就没有必要了.
+
+例如: 在Android输入法中,当键盘启动时,处在一个不需要现实键盘的页面时,keyboard对象为空, 那么对于所有键盘的处理位置,都需要增加下面的判定
+
+```java
+if (keyboard == null){
+    return;
+}
+
+```
+
+下面就是一段例子代码:
+
+```java
+
+public class InputMethod extends InputMethodService{
+    Keyboard mKeyboard;
+    public void onCreate(){
+        //根据情况,将mKeyboard初始化为SoftKeyBoard
+        //或者HardKeyBoard实例,有时也不会生成
+        //比如在插入硬盘启动到一个不可以输入的页面时
+        
+    }
+
+    public boolean onKeyDown(int keyCode, KeyEvent event){
+        if (mKeyboard == null){
+            return;
+        }
+    }
+}
+```
+
+但是,如果在初始化键盘时,根据情况将键盘生成为SoftKeyboard,HardKeyboard或者InvisibleKeyboard,则在调用键盘时就不必判定键盘是否为空.
+
+```java
+public class MyInputMethod extends InputMethodService{
+    Keyboard mKeyboard;
+    public void onCreate(){
+        //如果不能初始化为SoftKeyboard或者HardKeyboard
+        //则初始化为InvisibleKeyboard
+    }
+
+    public boolean onKeyDown(int keyCode, KeyEvent event){
+        return mKeyboard.onKeyDown(keyCode, event);
+    }
+}
+
+
+public interface Keyboard{
+    public boolean onKeyDown(int keyCode, KeyEvent event);
+}
+
+public class SoftKeyboard implements Keyboard{
+    public boolean onKeyDown(int keyCode, KeyEvent event){
+        //具体软键盘处理
+    }
+}
+
+public class HardKeyboard implements Keyboard{
+    public boolean onKeyDown(int keyCode, KeyEvent event){
+        //具体硬键盘处理
+    }
+}
+
+public class InvisibleKeyboard implements Keyboard{
+    public boolean onKeyDown(int keyCode, KeyEvent event){
+        return false; // 直接将按键动作交给应用程序处理
+    }
+}
+
+```
+
+通过这样一个新的类,InvisibleKeyboard可以将诸多的if(mKeyboard == null) 的判定规避掉,从而降低代码的复杂度.
+
+
+4. 状态模式 -- 减少判定的次数
+
+
+对于复杂的判定条件,如何才能减少判定的层数呢?下面介绍一下状态模式.例如在输入程序中,根据候补显示状态的不同,按下返回键的处理也不同.
+
+```java
+public class Candidate{
+    public int state;
+    public int rowCount;
+    public boolean visible;
+    private static final int NORMAL_VIEW = 0;
+    private static final int FULL_SCREEN = 1;
+    private static final int CLOSED = 2;
+
+    public boolean onKeyDown(int keyCode, KeyEvent event){
+        if (keyCode == KeyEvent.KEYCODE_BACK){
+            if (state == NORMAL_VIEW
+                && rowCount == 1
+                && visible == true){ // 只有一行候补时
+                    visible = false;
+                    state = CLOSED; // 关闭候补
+            } else if (state == NORMAL_VIEW
+                && rowCount > 1
+                && visible == true){ // 有多行候补,但是只显示第一行时
+                visible = false;
+                state = CLOSED;
+                    
+            } else if (state == FULL_SCREEN){
+                state = NORMAL_VIEW; // 返回单行显示
+            } else if (state == CLOSED){
+                MyInputMethod.getInstance().hideWindow();//关闭输入法
+            }
+        }
+    }
+}
+
+```
+
+其中,对于candidateView.state的判定如果改为状态模式,则整体代码的逻辑结构会变得简单.
+
+```java
+public class Candidate{
+    public interface State{
+        public State onKeyBack();
+    }
+
+    public State state;
+
+    public boolean onKeyDown(int keyCode, KeyEvent event){
+        if (keyCode == KeyEvent.KEYCODE_BACK){
+            state = state.onKeyBack();
+        }
+    }
+}
+
+public class Normal implements Candidate.State{
+    public State onKeyBack(){
+        return new Closed(); // 关闭候补
+    }
+}
+
+public class FullScreen implements Candidate.State{
+    public State onKeyBack(){
+        return new Normal(); // 单行显示
+    }
+}
+
+public class Closed implements Candidate.State{
+    public State onKeyBack(){
+        MyInputMethod.getInstance().hideWindow(); // 关闭输入法
+        return this;
+    }
+}
+
+```
+
+这样, 原本需要长分支才能够处理的onKeyDown中的BACK按键处理,分散到各个状态类中实现, 则onKeyDown方法中的BACK 按键处理变成了一句话.
+
+
+### 缩短长分支
+
+2. 策略模式
+
+```java
+对不同的按键进行分组, 创建一个接口 KeyProcessor;
+
+public interface KeyProcessor {
+    public boolean onKeyDown(int keyCode, KeyEvent event);
+    public boolean onKeyUp(int keyCode, KeyEvent event);
+}
+```
+
+然后创建几个处理器
+
+```java
+
+public ArrowKeyProcessor implements KeyProcessor{
+    public boolean onKeyDown(int keyCode, KeyEvent event){
+        // 处理方向键按下
+    }
+
+    public boolean onKeyUp(int keyCode, KeyEvent event){
+        // 处理方向键抬起
+    }
+}
+
+
+public ChannelKeyProcessor implements KeyProcessor{
+    public boolean onKeyDown(int keyCode, KeyEvent event){
+        // 处理方向键按下
+    }
+
+    public boolean onKeyUp(int keyCode, KeyEvent event){
+        // 处理方向键抬起
+    }
+}
+```
+
+以此类推
+
+这时, 在主体程序中, 根据按键的类型不同,采用不同的处理器进行按键处理,这样主体程序中的按键处理就会大幅度缩短.
+
+
+
+## 分离暧昧关系
+
+两个对象之间的关系过于暧昧和纠缠不清,就会引起代码的耦合度增高.为了降低耦合度,要尽量分离暧昧关系.
+
+### 循环引用
+
+Aa.b和Bb.a同时存在,不知道到底谁包含了谁,之所以发生这种情况是因为除了原本正确的A包含B的关系之外,B中的若干地方还打算调用A中的某个属性或者方法,所以就把A作为B的成员变量引入.
+拆离循环引用的方法有两种:
+
+**方法1 单例模式**
+
+让A单例,那么B如果要调用A,就可以通过获得A的实例的方法来调用A的方法.例如A.getInstance().xxx()
+
+
+**方法2 引入中间人**
+
+a. 命令模式(事件驱动机制)
+
+引入中间类C,当B有任何需要调用A时,通过C发送一个消息;当A有任何需要调用B的处理时,也通过C发送一个消息.
+
+b. 调停者模式
+
+引入中间类C,把A作为C的一个成员变量,而C作为单例模式存在.那么想要引用A时应该这样调用C.getInstance().a.xxx();这样做是因为A受到其他制约,不适合作为单例模式出现,同样,C作为一个公共调停者,不仅仅为A作容器,他也可能为其他内容作容器.在实际例子当中,对于全局的设定可能就是这样一个类.
+
+### 间接继承
+
+A->B->C 的继承关系: C突然要调用一个被B重载了的方法,但是并没有super.super这种调用方法,这是重载错误造成的问题,之所以C打算调用A的某个方法,而不是B中那个重载了的方法,是因为B中重载的方法的作用范围超出了C的预期,B中的方法违背的单一职责原则,所以需要修改B中的重载.如果实在无法修改B中的重载,那么可以在B中增加一个引桥callSuper()来调用C中想要调用的A的方法,然后在C中调用callSuper();遇到这种情况旺旺意味着设计上出现问题了.
+
+## 多维度变化
 
 # 6. 其他
 ## 6.1. 随机提供器
