--- a/会说话的代码.md
+++ b/会说话的代码.md
@@ -30,10 +30,13 @@
     - [结构方面的改进](#结构方面的改进)
         - [缩短长判定](#缩短长判定)
         - [缩短长分支](#缩短长分支)
+        - [减少参数个数](#减少参数个数)
+        - [减少嵌套的层数](#减少嵌套的层数)
     - [分离暧昧关系](#分离暧昧关系)
         - [循环引用](#循环引用)
         - [间接继承](#间接继承)
     - [多维度变化](#多维度变化)
+    - [自相似对象](#自相似对象)
 - [6. 其他](#6-其他)
     - [6.1. 随机提供器](#61-随机提供器)
 
@@ -1114,6 +1117,301 @@ public ChannelKeyProcessor implements KeyProcessor{
 
 这时, 在主体程序中, 根据按键的类型不同,采用不同的处理器进行按键处理,这样主体程序中的按键处理就会大幅度缩短.
 
+```java
+public class HardKeyboard{
+    public boolean onKeyDown(int keyCode, KeyEvent event){
+        if (event.isPrintingKey()){
+            // 处理输入按键;
+            return true;
+        }
+
+        try {
+            KeyProcessor processor = 
+             KeyProcessorFactory.createKeyProcessor(keyCode);
+            processor.onKeyDown(keyCode, event);
+            return true;
+        } catch (Exception e){
+            return false; // 发生Exception 表示不在处理范围内,交由App处理
+        }
+    }
+}
+```
+
+实现主体代码之后, 在KeyProcesscorFactory中根据输入的KeyCode来生成对应的KeyProcessor对象.如果直接按照按键进行switch-case, 那么只是将代码复杂的问题转移了,并没有解决问题.
+
+```java
+
+public class KeyProcessorFactory{
+    private static Map<Integer, String> 
+        keyMaps = new HashMap<Integer, String>();
+    static{
+        keyMaps.put(KeyEvent.KEYCODE_DPAD_CENTER, "Enter");
+        keyMaps.put(KeyEvent.KEYCODE_ENTER, "Enter");
+        keyMaps.put(KeyEvent.KEYCODE_LEFT, "Arrow");
+        keyMaps.put(keyEvent.KEYCODE_RIGHT, "Arrow");
+    }
+
+    public static KeyProcessor createKeyProcessor(int keyCode) throws ClassNotFoundException,
+                    InstantiationException,
+                    IllegalAccessException{
+        String processorName = keyMaps.get(KeyEvent.KEYCODE_DPAD_CENTER);
+        Class processor = 
+            Class.forname("com.otrois.inputmethod.keyprocessor."
+            + processorName
+            + "KeyProcessor");
+        return (KeyProcessor)processor.newInstance();
+    }
+}
+
+```
+
+这种手法将会大幅度缩减处理复杂度以及代码量, 但是会产生多个类.不过,还可以通过创建XML来管理各个按键的归属,从而进一步简化代码,并且让代码具有更高的可扩展性.
+
+3. 去掉return 前的判定
+
+先看下列代码: 
+
+```java
+
+public boolean hasMore(){
+    if (list.size() > 0){
+        return true;
+    }
+    return false;
+}
+```
+
+这段代码的意图很明显, 当list中有元素时就返回true, 否则返回false.
+
+这个方法只要返回的是boolean类型,编译就可以通过, 而boolean类型不仅仅是变量, 表达式也可以是boolean 类型, 为了能够更明确转换过程,先做一次中间转换.
+
+```java
+public class boolean hasMore(){
+    if ((list.size() > 0) == true){
+        return true;
+    }
+    return false;
+}
+
+
+```
+
+如果把中间的表达式list.size() > 0 替换为一个变量a,那么上面的代码其实等价于
+
+```java
+public boolean hasMore(){
+    return a;
+}
+```
+
+在替换回来, 这段代码就可以写出:
+```java
+public boolean hasMore(){
+    return list.size() > 0;
+}
+```
+
+像这样, 可以通过用表达式代替变量的方式, 来减少一次判定.
+
+### 减少参数个数
+
+参数个数过多会导致: 1. 代码变复杂,受影响范围变大 2. 可读性降低,需要记忆各个参数
+
+减少参数个数的方法有两种: 引入参数对象 与提取全局变量
+
+1. 引入参数对象
+
+例如, 一个计算器的功能
+
+```java
+public class Calculator{
+    public int add(int a, int b){
+        return a + b;
+    }
+}
+
+public class Calculator{
+    public int sub(int a, int b){
+        return a - b;
+    }
+}
+
+```
+
+可见, 多个方法都采用了相同的参数类型, 即两个整数,其实可以合并一下;
+
+```java
+public class Calculator{
+    public class Parameter{
+        public int a;
+        public int b;
+    }
+
+    public int add(Calculator.Parameter param){
+        return param.a + param.b;
+    }
+
+    public int sub(Calculator.Parameter param){
+        return param.a - param.b;
+    }
+}
+
+```
+
+其中, x,y,color 都可以提取为成员变量, 那么新的形式就是:
+
+```java
+public class Ball{
+    int x, y, color;
+
+    public void markHomeNeighbors(){
+        
+    }
+}
+
+```
+
+### 减少嵌套的层数
+
+嵌套层数越多,代码越复杂, 其全部的复杂度也就可能越高.因此控制嵌套层数是降低Bug发生概率的一个有效手段
+
+1.提取方法
+
+下面是一段代码的某部分主要逻辑,它有5层嵌套,摘除主要逻辑来看的话都有点复杂.
+
+```java
+if (ev.isPrintingKey()){//1
+    if (mHardShift > 0 || ev.isShiftPressed()){//2
+        if (charCode == 0){//3
+            if (mHardShift == 1){
+                mShiftPressing = false;
+            }
+
+            if (!ev.isShiftPressed()){
+                if (mHardShift == 1){
+                    mHardShift = 0;
+                }
+            }
+        }
+    }
+}
+
+```
+
+1和2 由于是直接嵌套,可以合并
+
+而3处理太长,不容易理解,可以提取方法
+
+这样,主要的逻辑代码就变成:
+
+```java
+if (ev.isPrintingKey() && (mHardShift > 0 || ev.isShiftPressed())){
+    processShift();
+}
+
+```
+
+而提出来的3处理如下:
+
+```java
+private void processShift(){
+    if (charCode == 0){//3
+            if (mHardShift == 1){
+                mShiftPressing = false;
+            }
+
+            if (!ev.isShiftPressed()){
+                if (mHardShift == 1){
+                    mHardShift = 0;
+                }
+            }
+    }
+}
+
+```
+
+这样可以通过提取方法逐步减少嵌套的层数.但是这并没有改变代码的处理逻辑.因此,代码的实际复杂度还是比较高的.
+
+2. 提前判定
+
+将
+```java
+if (list != null){
+    for (int i = 0; i < list.size(); i++){
+        //进行某种处理
+    }
+}
+```
+改为:
+
+```java
+if (list == null){
+    return;
+}
+
+for (int i = 0;i < list.size(); i++){
+    
+}
+
+```
+
+这样修改,就不会因为嵌套而导致换行等问题.
+和提取方法一样,提前判定并没有改变代码本质上的复杂度.
+
+3. 用whild代替for
+
+```java
+public void searchOld(){
+    int[] temp = new int[]{23, 42, 52, 34, 66, 32, 59};
+    boolean found = false;
+    int index = 0;
+    for (int i = 0; i < temp.length; i++){
+        if (temp[i] == 67){
+            found = true;
+            index = i;
+            break;
+        }
+    }
+
+    if (found){
+        System.out.println("index = " + index);
+    } else {
+        System.out.println("Not Found");
+    }
+}
+
+// 调整后
+public void searchNew(){
+    int[] temp = new int[]{23, 42, 52, 34, 66, 32, 59};
+    int index = 0;
+    
+    while (index < temp.lengh && temp[index] != 67){
+        index ++;
+    }
+    
+    if (index < temp.length){
+        System.out.println("index = " + index);
+    } else {
+        System.out.println("Not Found");
+    }
+}
+```
+
+这个是真正降低嵌套层数的做法
+
+
+2. 提取全局变量
+
+当有的参数被调用的次数过多时, 可以考虑将该参数作为全局变量来使用.例如:
+```java
+public class Ball{
+    public void markHomeNeighbors(int x, int y, int color){
+        
+    }
+}
+
+```
+
 
 
 ## 分离暧昧关系
@@ -1145,6 +1443,108 @@ b. 调停者模式
 A->B->C 的继承关系: C突然要调用一个被B重载了的方法,但是并没有super.super这种调用方法,这是重载错误造成的问题,之所以C打算调用A的某个方法,而不是B中那个重载了的方法,是因为B中重载的方法的作用范围超出了C的预期,B中的方法违背的单一职责原则,所以需要修改B中的重载.如果实在无法修改B中的重载,那么可以在B中增加一个引桥callSuper()来调用C中想要调用的A的方法,然后在C中调用callSuper();遇到这种情况旺旺意味着设计上出现问题了.
 
 ## 多维度变化
+
+在一些系统中系统会有若干个维度的变量来表示系统的状态.当这些变量组合在一起时它们所形成的各种可能性为`m*n*......`将是一个很大的网格.如果将这些组合放在同一个类中,那么对于当前条件所产生的判定条件会非常多.
+
+例如,在一个智能设备上的输入法可能有如下组合条件
+- 输入设备:软键盘,硬键盘,游戏手柄,遥控器  (4种条件)
+- 语言:拼音,务必,全角英文,半角英文,数字   (5种条件)
+- 键盘模式:12键,50键,QWERTY键盘        (4种条件)
+- 候补模式:无,一行,多行;               (3种条件)
+- 是否有输入:有,无;                   (2种条件)
+
+那么对于这种情况, 如何才能减少耦合度,减少判定处理的复杂度呢?下面是实现方式:
+
+```java
+public abstract class AbstractKeyboard{
+    public KeyMode keyMode;
+}
+
+public abstract class KeyMode{
+    public Language language;
+}
+
+public abstract class Language{
+    public boolean inputted;
+}
+
+public abstract class Candidate{
+    
+}
+
+public class InputMethod{
+    public AbstractKeyboard keyboard;
+    public Candidate candidate;
+}
+
+
+```
+
+在这里我们将各个维度的属性按照顺序一层包装一层.这样,当各个维度发生变化时,所产生的变化情形为 `m + n + ......`,这种方式叫做桥接模式.
+
+## 自相似对象
+
+一般来说, 在省,市,区这种行政单位结构,部门组织结构或者商品目录的属性结构里,每个节点都具有相似性.我们把这种节点具有相似性的结构称为自相似对象.对于自相似对象,可以采用组合者模式进行处理.
+
+例如, 要列出一个国家的所有的城市名称,可以通过下列方式进行:
+
+```java
+public abstract calss Place{
+    public List<Place> subPlaces;
+    public String name;
+    public int id;
+    public abstract void initSubs();
+
+    private void output(){
+        System.out.println(name);
+    }
+
+    public void listAll(){
+        output();
+        for (Place place : subPlaces){
+            subPlaces.output();
+        }
+    }
+}
+
+public class Country extends Place{
+    public void initSubs(){
+        // load province from db with county.id.
+    }
+}
+
+public class Province extends Place{
+    public void initSubs(){
+        // load city from db with province.id.
+    }
+}
+```
+
+这样, 制作一个联动下拉列表框是只要指明每个框所对应的类即可,这种方法叫做组合这模式.
+
+同样,制作一个工资公式编辑器是,可以采用自相似表达式数来完成.
+
+```java
+
+public class ExpressionTree{
+    public Node root;
+}
+
+public class Node{
+    public Node left;
+    public Node right;
+    public String symbol;
+    public double calculator(){
+        Calculable calculator = 
+            CalculatorFactory.createInstance(symbol);
+        return calculator.calculate(left, right);
+    }
+}
+```
+这样只要构建了二叉树结构的表达数,就可以通过上述结构针对每个员工来计算工资了.
+
+
+
 
 # 6. 其他
 ## 6.1. 随机提供器
