--- a/会说话的代码.md
+++ b/会说话的代码.md
@@ -39,6 +39,7 @@
     - [自相似对象](#自相似对象)
 - [6. 其他](#6-其他)
     - [6.1. 随机提供器](#61-随机提供器)
+    - [在旧代码基础上扩展类似功能](#在旧代码基础上扩展类似功能)
 
 <!-- /TOC -->
 # 1. 前言
@@ -1683,3 +1684,14 @@ public class RandomGems {
 }
 
 ```
+
+## 在旧代码基础上扩展类似功能
+
+- 利用接口的思想
+
+
+比如已有一个ABuff类,现需要增加另一种BBuff的类型,这样可以定义一个IBuff接口,让ABuff和BBuff都实现它
+
+
+
+之后把接口当做一个参数, 传入之前调用的方法 内, 达到没有修改原来代码的目的
