--- a/会说话的代码.md
+++ b/会说话的代码.md
@@ -37,6 +37,9 @@
         - [间接继承](#间接继承)
     - [多维度变化](#多维度变化)
     - [自相似对象](#自相似对象)
+    - [同质化处理](#同质化处理)
+        - [模板方法模式](#模板方法模式)
+        - [更灵活的模板方法](#更灵活的模板方法)
 - [6. 其他](#6-其他)
     - [6.1. 随机提供器](#61-随机提供器)
     - [在旧代码基础上扩展类似功能](#在旧代码基础上扩展类似功能)
@@ -1544,6 +1547,90 @@ public class Node{
 ```
 这样只要构建了二叉树结构的表达数,就可以通过上述结构针对每个员工来计算工资了.
 
+
+## 同质化处理
+
+### 模板方法模式
+
+当所有类都采用相同的行为顺序时,可以通过使用模板方法将相同的部分提出到父类,而在各个子类中实现其不同的部分即可.
+
+```java
+    public class Action{
+        public void execute(){
+            getInput();
+            validate();
+            if (hasError()){
+                render(errors);
+                return;
+            }
+            business();
+            render();
+        }
+    }
+
+    
+    public class BookEdit extends Action{
+        //这里来实现business部分
+    }
+```
+
+### 更灵活的模板方法
+上述模板方法对于每次调用的方法名称都进行了规定,但是当每个子类需要调用的方法名称不相同时,上述方法就无法完成相应的工作.这是可以采用Annotation.
+
+例如,在JUnit中的每个测试方法名称都不一样,但是只要写上@Test就会被当成测试代码调用
+
+```java
+  public class Control{
+        public void invoke(String name){
+            doBefores();
+            business();
+            doAfters();
+        }
+        
+    }
+    
+    public void doBefores() throws 
+            ClassNotFoundException,
+            InstantiationException,
+            IllegalAccessException{
+        
+        Method[] methods = getDeclaredMethods();
+        for (Method method :
+                methods) {
+            Annotation[] annotations = method.getDeclaredAnnotations();
+            for (Annotation a :
+                    annotations) {
+                if (a instanceof Before){
+                    method.invoke();
+                }
+            }
+        }
+    }
+    
+    public class EditBook extends Control{
+        @Before
+        public void checkSession(){
+            if (session == null){
+                render();
+            }
+        }
+        
+        public void save(){
+            
+        }
+    }
+    
+    public @interface Before{
+        
+    }
+    
+    public @interface After{
+        
+    }
+
+```
+
+当有多个Before和多个After时可以为Before 和After增加priority属性.注: 上述实现Before的方法只能是无参数的方法.
 
 
 
