--- a/会说话的代码.md
+++ b/会说话的代码.md
@@ -40,6 +40,12 @@
     - [同质化处理](#同质化处理)
         - [模板方法模式](#模板方法模式)
         - [更灵活的模板方法](#更灵活的模板方法)
+    - [架构方面的改进](#架构方面的改进)
+        - [包含关系](#包含关系)
+        - [继承关系](#继承关系)
+        - [有限取值范围](#有限取值范围)
+            - [多态](#多态)
+            - [享元模式](#享元模式)
 - [6. 其他](#6-其他)
     - [6.1. 随机提供器](#61-随机提供器)
     - [在旧代码基础上扩展类似功能](#在旧代码基础上扩展类似功能)
@@ -1575,7 +1581,7 @@ public class Node{
 ```
 
 ### 更灵活的模板方法
-上述模板方法对于每次调用的方法名称都进行了规定,但是当每个子类需要调用的方法名称不相同时,上述方法就无法完成相应的工作.这是可以采用Annotation.
+上述模板方法对于每次调用的方法名称都进行了规定,**但是当每个子类需要调用的方法名称不相同时,上述方法就无法完成相应的工作**.这是可以采用Annotation.
 
 例如,在JUnit中的每个测试方法名称都不一样,但是只要写上@Test就会被当成测试代码调用
 
@@ -1632,6 +1638,157 @@ public class Node{
 
 当有多个Before和多个After时可以为Before 和After增加priority属性.注: 上述实现Before的方法只能是无参数的方法.
 
+## 架构方面的改进
+
+### 包含关系
+
+对于一个问卷来说,上面有很多问题
+
+```java
+class Questionnaire{
+    public List<Question> questions;
+}
+
+```
+
+对于一个问题来说包含题干和4个候选答案,那么问题的定义就是这样的.
+```java
+class Question{
+    public String body;
+    public List<String> answer;
+}
+
+```
+
+### 继承关系
+
+对于有共性的事物可以抽出其公用接口以方便实现扩展
+
+例如:智能设备的输入法程序中的输入设备有硬键盘,软键盘,游戏手柄,遥控器.如果设置为标志位,那么判定条件将变得复杂,而如果将其抽象为InputDevice接口,然后根据实际接入的设备生成具体的对象,那么对于输入法本身来说就不必关心目前到底接入的是什么设备以及未来可能接入什么样的新设备.
+
+> 面向接口编程(InputDevice)
+
+例如,在一个应用程序中地址包括省,市,区三个级别,三个级别的选择是通过联动下拉列表实现的.如果定义为private包含city, city包含district, 而不提取公用接口的话,当需要扩展时(例如增加街道), 所需要增加的工作量是比较大的.
+
+而如果抽取了公用接口:
+
+
+```java
+public abstract class Place{
+    public Place parent;
+}
+```
+
+那么增加一个街道的现实大概只需要不到10行代码.(在HTML中只需要两行代码就可以增加一个新下拉框的代码)
+
+
+### 有限取值范围
+
+#### 多态
+
+枚举中可以定义方法, 一样可以实现多态
+
+> java8 中支持更多种写法
+
+```java
+ public class TrafficLight{
+      public static enum State{
+          RED{
+              public State next(){
+                  return GREEN;
+              }
+          },
+          GREEN{
+              public State next(){
+                  return YELLOW;
+              }
+          },
+          YELLOW{
+              public State next(){
+                  return RED;
+              }
+          },
+          public State next(){
+              return null;
+          }
+      }
+      
+      public State state;
+      
+      public void process(){
+          while (true){
+              state.next();
+              try {
+                  Thread.sleep(20000);
+              } catch (Exception e){
+                  // do nothing
+              }
+          }
+      }
+  }
+
+```
+
+在各种状态下分别定义自己的行为,则会让代码的复杂度降低,代码的长度变短,从而提高可读性.这种写法彻底消除了[恼人的default](#222-莫名其妙的default)
+
+
+综上所述,可以看出,枚举有以下特点:
+- 多态, 实现多种不同的行为
+- 更容易理解
+- 限制取值范围
+- 可以扩展属性
+- 容易扩展新值
+
+
+#### 享元模式
+
+对于需要实现较多的方法的情形,采用枚举会导致代码变得很长.那么就需要采用另外一种形式的有限值列表了,这就是享元模式.
+    将所有的可能取值放在同一个勒种叫做享元模式,这样每次访问时都只是从同一个位置取值,确保取值的唯一性和确定性.例如,下面是一个在不同语言模式下,输入法将输入文字转换为对应的本地文字的例子:
+
+```java
+
+     public interface Language{
+         public String transferInput(String input);
+     }
+    
+    public class Chinese implements Language{
+
+
+        @Override
+        public String transferInput(String input) {
+            // 把输入的拼音转换为汉字
+        }
+    }
+
+    public class Japanese implements Language{
+
+
+        @Override
+        public String transferInput(String input) {
+            // 把输入的罗马字转换为假名
+        }
+    }
+
+    public class English implements Language{
+
+
+        @Override
+        public String transferInput(String input) {
+            // 把输入的英文直接原样返回
+        }
+    }
+
+    public class LanguageSet{
+        public static Chinese CHINESE = new Chinese();
+        public static Japanese JAPANESE = new Japanese();
+        public static English ENGLISH = new English();
+    }
+
+```
+
+这样只要调用时通过LanguageSet.Chinese这样的形式就可以直接访问其中的值.
+
+享元模式具有可以容纳更多方法,更多属性的特点,适合多属性,多方法的有限取值范围使用.
 
 
 # 6. 其他
